@@ -1,6 +1,7 @@
 Revision history for ExtUtils-Builder-Compiler
 
 {{$NEXT}}
+          - Correctly check os version with -iwithsysroot
 
 0.013     2024-07-16 19:11:54+02:00 Europe/Brussels
           - Use -iwithsysroot on Mac for systemperl
